- bug #3208723 [import] Fix import of utf-8 XML files.
- bug #3039384 [auth] Force signon auth on signon URL change.
- bug #3168733 [core] Synchronization does not honor AllowArbitraryServer
- bug #3134495 [synchronization] Data containing single quotes prevents sync,
  thanks to jviewer
- Remove the custom color picker feature

3.3.11.0 (not yet released)

3.3.10.0 (2011-03-19)
- patch #3147400 [structure] Aria table size printed as unknown,
  thanks to erickoh75 - erickoh75
- patch #3150164 [structure] Ordering by size gives incorrect results,
  thanks to Madhura Jayaratne - madhuracj 
- bug #3153409 [core] 0 row(s) affected 
- bug #3155842 [core] Edit relational page and page number
- [security] Minor security fixes, see PMASA-2010-9 and PMASA-2010-10
- [lang] German update, thanks to to jannicars@users.sourceforge.net.

3.3.9.2 (2011-02-11)
- [security] SQL injection, see PMASA-2011-2

3.3.9.1 (2011-02-08)
- [security] Path disclosure, see PMASA-2011-1

3.3.9.0 (2011-01-03)
- bug [doc] Fix references to MySQL doc
- patch #3101490 Default function for TIMESTAMP, thanks to jirand - jirand
- bug #3103853 [js] Double quotes were not escaped in generated js
- bug #3077463 [core] Events were not copied when copying/renaming database
- bug #1762306 [core] Copy database with view of a view
- patch #3117535 [replication] Add quotes to database in initial statement,
  thanks to Craig Duncan - duncan3dc
- bug #3112614 [pdf schema] Scratchboard for PDF pages not working
- bug #3125606 [parser] Query for table "level" causes strange display
- bug #3127904 [parser] Close all opened round brackets indents

3.3.8.1 (2010-11-29)
- bug #3115519 (private) [security] XSS on db search, see PMASA-2010-8

3.3.8.0 (2010-10-25)
- bug #3059311 [import] BIGINT field type added to table analysis
- [core] Update library PHPExcel to version 1.7.4
- bug #3062455 [core] copy procedures and routines before tables
- bug #3062455 [export] with SQL, export procedures and routines before tables